policies/require_annotations.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-annotations
  annotations:
    policies.kyverno.io/title: Require Annotations
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod, Annotation
    policies.kyverno.io/description: >-
      Define and …with some value.            
spec:
  validationFailureAction: Enforce
  background: true
  rules:
  - name: check-for-annotation
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "The annotation `corp.org/department` is required."
      pattern:
        metadata:
          annotations:
            corp.org/department: "?*"
